文本消息接收&回复实现版本.

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -7,3 +7,7 @@ zabbix.api.login.userid=admin
 zabbix.api.login.password=skycloud
 #默认agent监控端口
 default.agent.port=8050
+#微信公众平台安全验证的TOKEN
+weixin.token=xiweicheng
+#发送被动响应消息模板 - 回复文本消息
+weixin.resp.tpl.text=<xml><ToUserName><![CDATA[{ToUserName}]]></ToUserName><FromUserName><![CDATA[{FromUserName}]]></FromUserName><CreateTime>{CreateTime}</CreateTime><MsgType><![CDATA[{MsgType}]]></MsgType><Content><![CDATA[{Content}]]></Content></xml>
