菜单创建测试.

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -11,3 +11,7 @@ default.agent.port=8050
 weixin.token=xiweicheng
 #发送被动响应消息模板 - 回复文本消息
 weixin.resp.tpl.text=<xml><ToUserName><![CDATA[{ToUserName}]]></ToUserName><FromUserName><![CDATA[{FromUserName}]]></FromUserName><CreateTime>{CreateTime}</CreateTime><MsgType><![CDATA[{MsgType}]]></MsgType><Content><![CDATA[{Content}]]></Content></xml>
+#获取access token
+weixin.api.url.token.get=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=wx4a89f0ddf3d27774&secret=b46def48691570aac6bcc4b92d13076b
+#自定义菜单创建接口
+weixin.api.url.menu.create=https://api.weixin.qq.com/cgi-bin/menu/create?access_token={accessToken}
