--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -15,3 +15,5 @@ weixin.resp.tpl.text=<xml><ToUserName><![CDATA[{ToUserName}]]></ToUserName><From
 weixin.api.url.token.get=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=wx4a89f0ddf3d27774&secret=b46def48691570aac6bcc4b92d13076b
 #自定义菜单创建接口
 weixin.api.url.menu.create=https://api.weixin.qq.com/cgi-bin/menu/create?access_token={accessToken}
+#发送客服消息
+weixin.api.url.custom.send=https://api.weixin.qq.com/cgi-bin/message/custom/send?access_token={accessToken}
