access token过期判断&重新获取!
Change-Id: I1a1199fd9a9c04602deb4efdb6465df9a911086e
Signed-off-by: xiweicheng <xiweicheng@yeah.net>

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -7,13 +7,25 @@ zabbix.api.login.userid=admin
 zabbix.api.login.password=skycloud
 #默认agent监控端口
 default.agent.port=8050
+
+#邮件发送地址
+java.mail.toAddress=xiweicheng@yeah.net
+
 #微信公众平台安全验证的TOKEN
 weixin.token=xiweicheng
 #发送被动响应消息模板 - 回复文本消息
 weixin.resp.tpl.text=<xml><ToUserName><![CDATA[{ToUserName}]]></ToUserName><FromUserName><![CDATA[{FromUserName}]]></FromUserName><CreateTime>{CreateTime}</CreateTime><MsgType><![CDATA[{MsgType}]]></MsgType><Content><![CDATA[{Content}]]></Content></xml>
+#appid
+weixin.api.client.credential.appid=wx4a89f0ddf3d27774
+#secret
+weixin.api.client.credential.secret=b46def48691570aac6bcc4b92d13076b
 #获取access token
-weixin.api.url.token.get=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid=wx4a89f0ddf3d27774&secret=b46def48691570aac6bcc4b92d13076b
+weixin.api.url.token.get=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid={appid}&secret={secret}
 #自定义菜单创建接口
 weixin.api.url.menu.create=https://api.weixin.qq.com/cgi-bin/menu/create?access_token={accessToken}
 #发送客服消息
 weixin.api.url.custom.send=https://api.weixin.qq.com/cgi-bin/message/custom/send?access_token={accessToken}
+
+
+
+
