--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
 			<artifactId>freemarker</artifactId>
 			<version>2.3.20</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
             
 
 		<!-- <dependency>
