微信关注用户信息记入数据库,获取地理位置.

--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,12 @@
 			<version>1.4.7</version>
 		</dependency>
             
-
+		<!-- <dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency> -->
+            
 		<!-- <dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
