--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -25,6 +25,34 @@ weixin.api.url.token.get=https://api.weixin.qq.com/cgi-bin/token?grant_type=clie
 weixin.api.url.menu.create=https://api.weixin.qq.com/cgi-bin/menu/create?access_token={accessToken}
 #发送客服消息
 weixin.api.url.custom.send=https://api.weixin.qq.com/cgi-bin/message/custom/send?access_token={accessToken}
+#获取用户基本信息
+weixin.api.url.user.info.get=https://api.weixin.qq.com/cgi-bin/user/info?access_token={accessToken}&openid={openid}&lang=zh_CN
+#自定义菜单删除接口
+weixin.api.url.menu.delete=https://api.weixin.qq.com/cgi-bin/menu/delete?access_token={accessToken}
+#用户同意授权，获取code
+weixin.api.url.connect.oauth2.authorize=https://open.weixin.qq.com/connect/oauth2/authorize?appid={appid}&redirect_uri={redirect_uri}&response_type=code&scope=snsapi_base&state=state01#wechat_redirect
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
