--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -11,6 +11,9 @@ default.agent.port=8050
 #邮件发送地址
 java.mail.toAddress=xiweicheng@yeah.net
 
+#开关标志
+switch.log.reqbody=1
+
 #微信公众平台安全验证的TOKEN
 weixin.token=xiweicheng
 #发送被动响应消息模板 - 回复文本消息
