--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -34,8 +34,10 @@ weixin.api.url.user.info.get=https://api.weixin.qq.com/cgi-bin/user/info?access_
 weixin.api.url.menu.delete=https://api.weixin.qq.com/cgi-bin/menu/delete?access_token={accessToken}
 #用户同意授权，获取code
 weixin.api.url.connect.oauth2.authorize=https://open.weixin.qq.com/connect/oauth2/authorize?appid={appid}&redirect_uri={redirect_uri}&response_type=code&scope=snsapi_base&state=state01#wechat_redirect
-
-
+#创建二维码ticket 临时二维码请求
+weixin.api.url.drcode.create=https://api.weixin.qq.com/cgi-bin/qrcode/create?access_token={accessToken}
+#通过ticket换取二维码
+weixin.api.url.showqrcode=https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket={ticket}
 
 
 
