发邮件 配置化.

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -13,6 +13,7 @@ java.mail.toAddress=xiweicheng@yeah.net
 
 #开关标志
 switch.log.reqbody=1
+switch.event.mail.send=1
 
 #微信公众平台安全验证的TOKEN
 weixin.token=xiweicheng
