--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -13,7 +13,7 @@ java.mail.toAddress=xiweicheng@yeah.net
 
 #开关标志
 switch.log.reqbody=1
-switch.event.mail.send=1
+switch.event.mail.send=0
 
 #微信公众平台安全验证的TOKEN
 weixin.token=xiweicheng
@@ -34,14 +34,20 @@ weixin.api.url.user.info.get=https://api.weixin.qq.com/cgi-bin/user/info?access_
 #自定义菜单删除接口
 weixin.api.url.menu.delete=https://api.weixin.qq.com/cgi-bin/menu/delete?access_token={accessToken}
 #用户同意授权，获取code
-weixin.api.url.connect.oauth2.authorize=https://open.weixin.qq.com/connect/oauth2/authorize?appid={appid}&redirect_uri={redirect_uri}&response_type=code&scope=snsapi_base&state=state01#wechat_redirect
+weixin.api.url.connect.oauth2.authorize=https://open.weixin.qq.com/connect/oauth2/authorize?appid={appid}&redirect_uri={redirect_uri}&response_type=code&scope=snsapi_base&state={state}#wechat_redirect
 #创建二维码ticket 临时二维码请求
 weixin.api.url.drcode.create=https://api.weixin.qq.com/cgi-bin/qrcode/create?access_token={accessToken}
 #通过ticket换取二维码
 weixin.api.url.showqrcode=https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket={ticket}
-
-
-
+#自己的服务器地址URL
+#weixin.api.url.redirect=http://xiweicheng.oicp.net
+weixin.api.url.redirect=http://www.canzs.cn
+#通过code换取网页授权access_token
+weixin.api.url.access.token.get=https://api.weixin.qq.com/sns/oauth2/access_token?appid={appid}&secret={secret}&code={code}&grant_type=authorization_code
+#刷新access_token（如果需要）
+weixin.api.url.access.token.refresh=https://api.weixin.qq.com/sns/oauth2/refresh_token?appid={appid}&grant_type=refresh_token&refresh_token={refresh_token}
+#拉取用户信息(需scope为 snsapi_userinfo)
+weixin.api.url.web.user.info.get=https://api.weixin.qq.com/sns/userinfo?access_token={access_token}&openid={openid}&lang=zh_CN
 
 
 
