二维码生成,下载,邮件发送.

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -15,6 +15,13 @@ java.mail.toAddress=xiweicheng@yeah.net
 switch.log.reqbody=1
 switch.event.mail.send=0
 
+#二维码使用次数限制
+qrcode.use.limit.time=10
+#场景值ID，临时二维码时为32位非0整型，永久二维码时最大值为100000（目前参数只支持1--100000）
+qrcode.scene.id.max=100000
+#商家默认可以生成的二维码数量
+qrcode.business.max.default=2
+
 #微信公众平台安全验证的TOKEN
 weixin.token=xiweicheng
 #发送被动响应消息模板 - 回复文本消息
