--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -15,6 +15,10 @@ java.mail.toAddress=xiweicheng@yeah.net
 switch.log.reqbody=1
 switch.event.mail.send=0
 
+#文件path
+path.menu.store=resources/images/menu/
+path.qrcode.store=resources/images/qrcode/
+
 #二维码使用次数限制
 qrcode.use.limit.time=10
 #场景值ID，临时二维码时为32位非0整型，永久二维码时最大值为100000（目前参数只支持1--100000）
