--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,12 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.1</version>
 		</dependency>
-            
+		
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
             
 		<!-- <dependency>
 			<groupId>jstl</groupId>
