--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -25,15 +25,21 @@ qrcode.use.limit.time=10
 qrcode.scene.id.max=100000
 #商家默认可以生成的二维码数量
 qrcode.business.max.default=100
+#是否保存微信发来的消息到数据库
+weixin.send.msg.is.save=1
 
 #微信公众平台安全验证的TOKEN
 weixin.token=xiweicheng
 #发送被动响应消息模板 - 回复文本消息
 weixin.resp.tpl.text=<xml><ToUserName><![CDATA[{ToUserName}]]></ToUserName><FromUserName><![CDATA[{FromUserName}]]></FromUserName><CreateTime>{CreateTime}</CreateTime><MsgType><![CDATA[{MsgType}]]></MsgType><Content><![CDATA[{Content}]]></Content></xml>
 #appid
-weixin.api.client.credential.appid=wx4a89f0ddf3d27774
+weixin.api.client.credential.appid=wxc875e0cd829dd5b6
 #secret
-weixin.api.client.credential.secret=b46def48691570aac6bcc4b92d13076b
+weixin.api.client.credential.secret=be9b30892af2864fa4a381336c6dbfdc
+##appid
+#weixin.api.client.credential.appid=wx4a89f0ddf3d27774
+##secret
+#weixin.api.client.credential.secret=b46def48691570aac6bcc4b92d13076b
 #获取access token
 weixin.api.url.token.get=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid={appid}&secret={secret}
 #自定义菜单创建接口
