--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -57,8 +57,8 @@ weixin.api.url.drcode.create=https://api.weixin.qq.com/cgi-bin/qrcode/create?acc
 #通过ticket换取二维码
 weixin.api.url.showqrcode=https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket={ticket}
 #自己的服务器地址URL
-#weixin.api.url.redirect=http://xiweicheng.oicp.net
-weixin.api.url.redirect=http://www.canzs.cn
+weixin.api.url.redirect=http://xiweicheng.oicp.net
+#weixin.api.url.redirect=http://www.canzs.cn
 #通过code换取网页授权access_token
 weixin.api.url.access.token.get=https://api.weixin.qq.com/sns/oauth2/access_token?appid={appid}&secret={secret}&code={code}&grant_type=authorization_code
 #刷新access_token（如果需要）
