--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -32,14 +32,14 @@ weixin.send.msg.is.save=1
 weixin.token=xiweicheng
 #发送被动响应消息模板 - 回复文本消息
 weixin.resp.tpl.text=<xml><ToUserName><![CDATA[{ToUserName}]]></ToUserName><FromUserName><![CDATA[{FromUserName}]]></FromUserName><CreateTime>{CreateTime}</CreateTime><MsgType><![CDATA[{MsgType}]]></MsgType><Content><![CDATA[{Content}]]></Content></xml>
-#appid
-weixin.api.client.credential.appid=wxc875e0cd829dd5b6
-#secret
-weixin.api.client.credential.secret=be9b30892af2864fa4a381336c6dbfdc
 ##appid
-#weixin.api.client.credential.appid=wx4a89f0ddf3d27774
+#weixin.api.client.credential.appid=wxc875e0cd829dd5b6
 ##secret
-#weixin.api.client.credential.secret=b46def48691570aac6bcc4b92d13076b
+#weixin.api.client.credential.secret=be9b30892af2864fa4a381336c6dbfdc
+#appid
+weixin.api.client.credential.appid=wx4a89f0ddf3d27774
+#secret
+weixin.api.client.credential.secret=b46def48691570aac6bcc4b92d13076b
 #获取access token
 weixin.api.url.token.get=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid={appid}&secret={secret}
 #自定义菜单创建接口
@@ -57,8 +57,8 @@ weixin.api.url.drcode.create=https://api.weixin.qq.com/cgi-bin/qrcode/create?acc
 #通过ticket换取二维码
 weixin.api.url.showqrcode=https://mp.weixin.qq.com/cgi-bin/showqrcode?ticket={ticket}
 #自己的服务器地址URL
-weixin.api.url.redirect=http://xiweicheng.oicp.net
-#weixin.api.url.redirect=http://www.canzs.cn
+#weixin.api.url.redirect=http://xiweicheng.oicp.net
+weixin.api.url.redirect=http://www.canzs.cn
 #通过code换取网页授权access_token
 weixin.api.url.access.token.get=https://api.weixin.qq.com/sns/oauth2/access_token?appid={appid}&secret={secret}&code={code}&grant_type=authorization_code
 #刷新access_token（如果需要）
