图片大小缩放到640*640,上传图片改进.

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -10,6 +10,16 @@ switch.event.mail.send=0
 path.menu.store=resources/images/menu/
 path.qrcode.store=resources/images/qrcode/
 
+#图片缩放等级
+image.scale.size.mini=24
+image.scale.size.tiny=32
+image.scale.size.small=46
+image.scale.size.medium=64
+image.scale.size.large=120
+image.scale.size.big=320
+image.scale.size.huge=640
+image.scale.size.massive=860
+
 #二维码使用次数限制
 qrcode.use.limit.time=10
 #场景值ID，临时二维码时为32位非0整型，永久二维码时最大值为100000（目前参数只支持1--100000）
