顾客点菜优化,可以定几份.

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -26,6 +26,8 @@ qrcode.use.limit.time=200
 qrcode.scene.id.max=100000
 #商家默认可以生成的二维码数量
 qrcode.business.max.default=100
+#商家默认可以上传的的图片最大数量
+upload.image.max=100
 #是否保存微信发来的消息到数据库
 weixin.send.msg.is.save=1
 
