--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -35,20 +35,25 @@ weixin.send.msg.is.save=1
 weixin.token=xiweicheng
 #发送被动响应消息模板 - 回复文本消息
 weixin.resp.tpl.text=<xml><ToUserName><![CDATA[{ToUserName}]]></ToUserName><FromUserName><![CDATA[{FromUserName}]]></FromUserName><CreateTime>{CreateTime}</CreateTime><MsgType><![CDATA[{MsgType}]]></MsgType><Content><![CDATA[{Content}]]></Content></xml>
-#xiweicheng
-##appid
-#weixin.api.client.credential.appid=wxc875e0cd829dd5b6
-##secret
-#weixin.api.client.credential.secret=be9b30892af2864fa4a381336c6dbfdc
-#daihongmei
+
+#XIWEICHENG
+#appid
+weixin.api.client.credential.appid=wxc875e0cd829dd5b6
+#secret
+weixin.api.client.credential.secret=be9b30892af2864fa4a381336c6dbfdc
+
+#DAIHONGMEI
 ##appid
 #weixin.api.client.credential.appid=wx4a89f0ddf3d27774
 ##secret
 #weixin.api.client.credential.secret=b46def48691570aac6bcc4b92d13076b
-#appid
-weixin.api.client.credential.appid=wx1c7eff059b0d77fa
-#secret
-weixin.api.client.credential.secret=e2e4618f585c70466c0ec588b9eae8ea
+
+#WUZHONGBAO
+##appid
+#weixin.api.client.credential.appid=wx1c7eff059b0d77fa
+##secret
+#weixin.api.client.credential.secret=e2e4618f585c70466c0ec588b9eae8ea
+
 #获取access token
 weixin.api.url.token.get=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid={appid}&secret={secret}
 #自定义菜单创建接口
