--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -5,6 +5,8 @@ java.mail.toAddress=xiweicheng@yeah.net
 #开关标志
 switch.log.reqbody=1
 switch.event.mail.send=0
+#顾客扫描二维码进入是否需要商家确认
+switch.consumer.in.confirm=0
 
 #文件path
 path.menu.store=resources/images/menu/
@@ -36,17 +38,17 @@ weixin.token=xiweicheng
 #发送被动响应消息模板 - 回复文本消息
 weixin.resp.tpl.text=<xml><ToUserName><![CDATA[{ToUserName}]]></ToUserName><FromUserName><![CDATA[{FromUserName}]]></FromUserName><CreateTime>{CreateTime}</CreateTime><MsgType><![CDATA[{MsgType}]]></MsgType><Content><![CDATA[{Content}]]></Content></xml>
 
-#XIWEICHENG
-#appid
-weixin.api.client.credential.appid=wxc875e0cd829dd5b6
-#secret
-weixin.api.client.credential.secret=be9b30892af2864fa4a381336c6dbfdc
-
 #DAIHONGMEI
 ##appid
-#weixin.api.client.credential.appid=wx4a89f0ddf3d27774
+#weixin.api.client.credential.appid=wxc875e0cd829dd5b6
 ##secret
-#weixin.api.client.credential.secret=b46def48691570aac6bcc4b92d13076b
+#weixin.api.client.credential.secret=be9b30892af2864fa4a381336c6dbfdc
+
+#XIWEICHENG
+#appid
+weixin.api.client.credential.appid=wx4a89f0ddf3d27774
+#secret
+weixin.api.client.credential.secret=b46def48691570aac6bcc4b92d13076b
 
 #WUZHONGBAO
 ##appid
