后厨手机界面...

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -24,7 +24,7 @@
 #　%l   输出日志事件的发生位置，包括类目名、发生的线程，以及在代码中的行数。举例：Testlog4.main(TestLog4.java: 10 ) 
 
 log4j.debug=false 
-log4j.rootCategory=ERROR, CONSOLE,E
+log4j.rootCategory=DEBUG, CONSOLE,E
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender 
 log4j.appender.CONSOLE.Threshold=DEBUG 
