平台登录模块...

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -22,6 +22,9 @@ image.scale.size.big=320
 image.scale.size.huge=640
 image.scale.size.massive=860
 
+#文字内容简略长度限制
+content.length.limit=30
+
 #二维码使用次数限制
 qrcode.use.limit.time=200
 #场景值ID，临时二维码时为32位非0整型，永久二维码时最大值为100000（目前参数只支持1--100000）
