平台商家管理...

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -31,10 +31,15 @@ qrcode.use.limit.time=200
 qrcode.scene.id.max=100000
 #商家默认可以生成的二维码数量
 qrcode.business.max.default=100
+#商家使用平台的默认天数
+days.business.max.default=3650
 #商家默认可以上传的的图片最大数量
 upload.image.max=100
 #是否保存微信发来的消息到数据库
 weixin.send.msg.is.save=1
+
+#平台管理者openId,接收微信消息使用
+czs.mgr.openid=okPUDtzjrogWsWdsI_Fz39VNbgBc
 
 #微信公众平台安全验证的TOKEN
 weixin.token=xiweicheng
