--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,36 @@
+#DBCP数据库连接池配置
+
+#dataSource: 要连接的 datasource (通常我们不会定义在 server.xml) 
+#defaultAutoCommit: 对于事务是否 autoCommit, 默认值为 true 
+#defaultReadOnly: 对于数据库是否只能读取, 默认值为 false 
+#driverClassName:连接数据库所用的 JDBC Driver Class, 
+#maxActive: 可以从对象池中取出的对象最大个数，为0则表示没有限制，默认为8 
+#maxIdle: 最大等待连接中的数量,设 0 为没有限制 （对象池中对象最大个数） 
+#minIdle：对象池中对象最小个数 
+#maxWait: 最大等待秒数, 单位为 ms, 超过时间会丟出错误信息 
+#password: 登陆数据库所用的密码 
+#url: 连接数据库的 URL 
+#username: 登陆数据库所用的帐号 
+#validationQuery: 验证连接是否成功, SQL SELECT 指令至少要返回一行 
+#removeAbandoned: 是否自我中断, 默认是 false 
+#removeAbandonedTimeout: 几秒后会自我中断, removeAbandoned 必须为 true 
+#logAbandoned: 是否记录中断事件, 默认为 false 
+#minEvictableIdleTimeMillis：大于0 ，进行连接空闲时间判断，或为0，对空闲的连接不进行验证；默认30分钟 
+#timeBetweenEvictionRunsMillis：失效检查线程运行时间间隔，如果小于等于0，不会启动检查线程，默认-1 
+#testOnBorrow：取得对象时是否进行验证，检查对象是否有效，默认为false 
+#testOnReturn：返回对象时是否进行验证，检查对象是否有效，默认为false 
+#testWhileIdle：空闲时是否进行验证，检查对象是否有效，默认为false 
+
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/afl
 jdbc.username=root
 jdbc.password=skycloud
 jdbc.initialSize=5
-jdbc.maxWait=6000
-jdbc.maxIdle=10
+jdbc.maxWait=60000
+jdbc.maxIdle=30
 jdbc.minIdle=5
-jdbc.maxActive=15
+jdbc.maxActive=1000
+jdbc.validationQuery=select 1 from dual
+jdbc.testOnBorrow=true
+jdbc.testOnReturn=true
+jdbc.testWhileIdle=true
