--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -13,24 +13,38 @@
 #username: 登陆数据库所用的帐号 
 #validationQuery: 验证连接是否成功, SQL SELECT 指令至少要返回一行 
 #removeAbandoned: 是否自我中断, 默认是 false 
-#removeAbandonedTimeout: 几秒后会自我中断, removeAbandoned 必须为 true 
+#removeAbandonedTimeout: 超时时间(以秒数为单位),几秒后会自我中断, removeAbandoned 必须为 true 
 #logAbandoned: 是否记录中断事件, 默认为 false 
 #minEvictableIdleTimeMillis：大于0 ，进行连接空闲时间判断，或为0，对空闲的连接不进行验证；默认30分钟 
-#timeBetweenEvictionRunsMillis：失效检查线程运行时间间隔，如果小于等于0，不会启动检查线程，默认-1 
+#timeBetweenEvictionRunsMillis：在空闲连接回收器线程运行期间休眠的时间值,以毫秒为单位,失效检查线程运行时间间隔，如果小于等于0，不会启动检查线程，默认-1 
 #testOnBorrow：取得对象时是否进行验证，检查对象是否有效，默认为false 
 #testOnReturn：返回对象时是否进行验证，检查对象是否有效，默认为false 
 #testWhileIdle：空闲时是否进行验证，检查对象是否有效，默认为false 
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/afl
+jdbc.url=jdbc:mysql://localhost:3306/afl?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=skycloud
-jdbc.initialSize=5
 jdbc.maxWait=60000
 jdbc.maxIdle=30
 jdbc.minIdle=5
-jdbc.maxActive=1000
+jdbc.maxActive=150
 jdbc.validationQuery=select 1 from dual
 jdbc.testOnBorrow=true
 jdbc.testOnReturn=true
 jdbc.testWhileIdle=true
+
+#初始化连接
+jdbc.initialSize=30
+#logAbandoned
+jdbc.logAbandoned=true
+#是否自动回收超时连接
+jdbc.removeAbandoned=true
+超时时间(以秒数为单位)
+jdbc.removeAbandonedTimeout=10
+#在空闲连接回收器线程运行期间休眠的时间值,以毫秒为单位
+jdbc.timeBetweenEvictionRunsMillis=10000
+#在每次空闲连接回收器线程(如果有)运行时检查的连接数量
+jdbc.numTestsPerEvictionRun=10
+#1000 * 60 * 30  连接在池中保持空闲而不被空闲连接回收器线程
+jdbc.minEvictableIdleTimeMillis=10000
