--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -3,48 +3,43 @@
 #dataSource: 要连接的 datasource (通常我们不会定义在 server.xml) 
 #defaultAutoCommit: 对于事务是否 autoCommit, 默认值为 true 
 #defaultReadOnly: 对于数据库是否只能读取, 默认值为 false 
-#driverClassName:连接数据库所用的 JDBC Driver Class, 
-#maxActive: 可以从对象池中取出的对象最大个数，为0则表示没有限制，默认为8 
-#maxIdle: 最大等待连接中的数量,设 0 为没有限制 （对象池中对象最大个数） 
-#minIdle：对象池中对象最小个数 
-#maxWait: 最大等待秒数, 单位为 ms, 超过时间会丟出错误信息 
-#password: 登陆数据库所用的密码 
-#url: 连接数据库的 URL 
-#username: 登陆数据库所用的帐号 
-#validationQuery: 验证连接是否成功, SQL SELECT 指令至少要返回一行 
-#removeAbandoned: 是否自我中断, 默认是 false 
-#removeAbandonedTimeout: 超时时间(以秒数为单位),几秒后会自我中断, removeAbandoned 必须为 true 
-#logAbandoned: 是否记录中断事件, 默认为 false 
-#minEvictableIdleTimeMillis：大于0 ，进行连接空闲时间判断，或为0，对空闲的连接不进行验证；默认30分钟 
-#timeBetweenEvictionRunsMillis：在空闲连接回收器线程运行期间休眠的时间值,以毫秒为单位,失效检查线程运行时间间隔，如果小于等于0，不会启动检查线程，默认-1 
-#testOnBorrow：取得对象时是否进行验证，检查对象是否有效，默认为false 
-#testOnReturn：返回对象时是否进行验证，检查对象是否有效，默认为false 
-#testWhileIdle：空闲时是否进行验证，检查对象是否有效，默认为false 
 
+#driverClassName:连接数据库所用的 JDBC Driver Class
 jdbc.driverClassName=com.mysql.jdbc.Driver
+#url: 连接数据库的 URL
 jdbc.url=jdbc:mysql://localhost:3306/czs?useUnicode=true&characterEncoding=UTF-8
+#username: 登陆数据库所用的帐号 
 jdbc.username=root
+#password: 登陆数据库所用的密码 
 jdbc.password=skycloud
+#maxWait: 最大等待秒数, 单位为 ms, 超过时间会丟出错误信息 
 jdbc.maxWait=60000
+#maxIdle: 最大等待连接中的数量,设 0 为没有限制 （对象池中对象最大个数） 
 jdbc.maxIdle=30
+#minIdle：对象池中对象最小个数 
 jdbc.minIdle=5
+#maxActive: 可以从对象池中取出的对象最大个数，为0则表示没有限制，默认为8 
 jdbc.maxActive=150
+#validationQuery: 验证连接是否成功, SQL SELECT 指令至少要返回一行 
 jdbc.validationQuery=select 1 from dual
+#testOnBorrow：取得对象时是否进行验证，检查对象是否有效，默认为false 
 jdbc.testOnBorrow=true
+#testOnReturn：返回对象时是否进行验证，检查对象是否有效，默认为false 
 jdbc.testOnReturn=true
+#testWhileIdle：空闲时是否进行验证，检查对象是否有效，默认为false 
 jdbc.testWhileIdle=true
 
 #初始化连接
 jdbc.initialSize=30
 #logAbandoned
 jdbc.logAbandoned=true
-#是否自动回收超时连接
+#removeAbandoned: 是否自我中断, 默认是 false 
 jdbc.removeAbandoned=true
-超时时间(以秒数为单位)
+#removeAbandonedTimeout: 超时时间(以秒数为单位),几秒后会自我中断, removeAbandoned 必须为 true 
 jdbc.removeAbandonedTimeout=10
-#在空闲连接回收器线程运行期间休眠的时间值,以毫秒为单位
+#timeBetweenEvictionRunsMillis：在空闲连接回收器线程运行期间休眠的时间值,以毫秒为单位,失效检查线程运行时间间隔，如果小于等于0，不会启动检查线程，默认-1 
 jdbc.timeBetweenEvictionRunsMillis=10000
 #在每次空闲连接回收器线程(如果有)运行时检查的连接数量
 jdbc.numTestsPerEvictionRun=10
-#1000 * 60 * 30  连接在池中保持空闲而不被空闲连接回收器线程
+#minEvictableIdleTimeMillis：大于0 ，进行连接空闲时间判断，或为0，对空闲的连接不进行验证；默认30分钟 
 jdbc.minEvictableIdleTimeMillis=10000
