二维码购买,时间展示改进...

--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
@@ -160,26 +160,20 @@
 			<artifactId>commons-compress</artifactId>
 			<version>1.7</version>
 		</dependency>
-            
-		<!-- <dependency>
-			<groupId>jstl</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency> -->
-            
-		<!-- <dependency>
-			<groupId>jaxen</groupId>
-			<artifactId>jaxen</artifactId>
-			<version>1.1.6</version>
-		</dependency> -->
-            
-		
-		<!-- <dependency>
-			<groupId>net.sf.json-lib</groupId>
-			<artifactId>json-lib</artifactId>
-			<version>2.1</version>
-		</dependency> -->
-            
+
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+		<!-- <dependency> <groupId>jaxen</groupId> <artifactId>jaxen</artifactId> 
+			<version>1.1.6</version> </dependency> -->
+
+
+		<!-- <dependency> <groupId>net.sf.json-lib</groupId> <artifactId>json-lib</artifactId> 
+			<version>2.1</version> </dependency> -->
+
 	</dependencies>
 
 	<build>
@@ -214,11 +208,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<version>2.2.1</version>
-				<!-- <configuration>
-					<outputDirectory>/</outputDirectory>
-					<finalName>test.jar</finalName>
-					<attach>false</attach>
-				</configuration> -->
+				<!-- <configuration> <outputDirectory>/</outputDirectory> <finalName>test.jar</finalName> 
+					<attach>false</attach> </configuration> -->
 				<executions>
 					<execution>
 						<phase>package</phase>
