--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -31,6 +31,8 @@ qrcode.use.limit.time=200
 qrcode.scene.id.max=100000
 #商家默认可以生成的二维码数量
 qrcode.business.max.default=100
+#生成一张二维码消耗的餐豆值
+qrcode.one.life.value=10
 #商家使用平台的默认天数
 days.business.max.default=3650
 #商家默认可以上传的的图片最大数量
