--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -9,9 +9,9 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 #url: 连接数据库的 URL
 jdbc.url=jdbc:mysql://localhost:3306/czs?useUnicode=true&characterEncoding=UTF-8
 #username: 登陆数据库所用的帐号 
-jdbc.username=
+jdbc.username=root
 #password: 登陆数据库所用的密码 
-jdbc.password=
+jdbc.password=skycloud
 #maxWait: 最大等待秒数, 单位为 ms, 超过时间会丟出错误信息 
 jdbc.maxWait=60000
 #maxIdle: 最大等待连接中的数量,设 0 为没有限制 （对象池中对象最大个数） 
